2008-02-09  Inge Wallin  <inge@lysator.liu.se>

	Draw fog is only relevant in the Map.
	* src/lib/MarbleWidget.{h,cpp} (drawFog): Only call drawFog in the map. 
	* src/lib/MarbleMap.cpp (drawFog): Clean

2008-02-08  Inge Wallin  <inge@lysator.liu.se>

	Active Region is only relevant in the Widget
	* src/lib/MarbleMap.{h,cpp}: remove activeRegion from here
	* src/lib/MarbleWidget.{h,cpp}: move activeRegion here

	Remove unnecessary code.
	* src/lib/MarbleWidget.{h,cpp} (setActiveRegion): deleted
	(setBoundingBox): deleted
	* src/lib/MarbleMap.cpp: cleaning
	* src/lib/AbstractLayer/AbstractLayer.cpp: cleaning

	Make flat projection work
	* src/lib/MarbleWidget.cpp: Don't use local m_viewParams for
	projection.
	* src/lib/MarbleMap.{h,cpp} (viewParams): New method

	More preparation
	* src/lib/MarbleWidget.cpp: Clean away intermediate code from the
	Widget/Map separation.

2008-02-07  Inge Wallin  <inge@lysator.liu.se>

	More preparation
	* src/lib/ViewParams.cpp: Cleaning

	Cleaning and preparation for next step.
	* src/lib/ClipPainter.{h,cpp}: Cleaning and documentation.

	Next step in separation of MarbleWidget.
	* src/lib/MarbleWidget.cpp: Make the legend work again by making
	all the setters and getters call the equivalent function in
	MarbleMap. 

2008-02-07  Torsten Rahn  <rahn@kde.org>

    * Messages.sh:
    - Fix for untranslatable string by Burkhard Lück

2008-02-05  Inge Wallin  <inge@lysator.liu.se>

	* src/lib/MarbleWidget.cpp: Continue adapting MarbleWidget to the
	new MarbleMap.

	Fix the pan bug that was left from previous commits so that tackat
	can work again.
	* src/lib/MarbleWidget.cpp (rotateTo): Delegate to MarbleMap
	* src/lib/MarbleMap.cpp: cleaning
	* src/lib/MarbleWidgetInputHandler.cpp: cleaning

2008-02-04  Inge Wallin  <inge@lysator.liu.se>

	Hopefully fix the crash in goHome in the qt only version.
	* src/lib/MarbleWidget.cpp (class MarbleWidgetPrivate): Disable
	m_homePoint and m_homeZoom.